// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render disabled button when blocked by shield access policy 1`] = `
<AdditionalTabTooltip
  defaultTooltipText={
    <FormattedMessage
      defaultMessage="Use of this app is blocked due to a security policy."
      id="be.additionalTab.blockedByShieldAccessPolicy"
    />
  }
  isFtuxVisible={true}
>
  <PlainButton
    aria-label="test title"
    className="bdl-AdditionalTab bdl-is-disabled"
    data-testid="additionaltab"
    isDisabled={true}
    onClick={[Function]}
    type="button"
  >
    <img
      alt="test title"
      className="bdl-AdditionalTab-icon"
      onError={[Function]}
      src="https://foo.com/image"
    />
  </PlainButton>
</AdditionalTabTooltip>
`;

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render icon if no valid id provided with an icon 1`] = `
<AdditionalTabTooltip
  defaultTooltipText="test title"
  isFtuxVisible={true}
>
  <PlainButton
    aria-label="test title"
    className="bdl-AdditionalTab bdl-is-overflow"
    data-testid="additionaltab"
    isDisabled={false}
    onClick={[Function]}
    type="button"
  >
    <SvgPlus />
  </PlainButton>
</AdditionalTabTooltip>
`;

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render the more icon ellipsis if no valid id and icon URL are provided 1`] = `
<AdditionalTabTooltip
  defaultTooltipText="test title"
  isFtuxVisible={true}
>
  <PlainButton
    aria-label="test title"
    className="bdl-AdditionalTab bdl-is-overflow"
    data-testid="additionaltab"
    isDisabled={false}
    onClick={[Function]}
    type="button"
  >
    <Apps16
      color="#909090"
      height={20}
      width={20}
    />
  </PlainButton>
</AdditionalTabTooltip>
`;

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render the placeholder when an error occurs 1`] = `
<AdditionalTabTooltip
  defaultTooltipText="test title"
  isFtuxVisible={true}
>
  <PlainButton
    aria-label="test title"
    className="bdl-AdditionalTab bdl-is-overflow"
    data-testid="additionaltab"
    isDisabled={false}
    onClick={[Function]}
    type="button"
  >
    <AdditionalTabPlaceholder
      isLoading={false}
    />
  </PlainButton>
</AdditionalTabTooltip>
`;

exports[`elements/content-sidebar/additional-tabs/AdditionalTab should render the tooltip and button contents 1`] = `
<AdditionalTabTooltip
  defaultTooltipText="test title"
  isFtuxVisible={true}
>
  <PlainButton
    aria-label="test title"
    className="bdl-AdditionalTab"
    data-testid="additionaltab"
    isDisabled={false}
    onClick={[Function]}
    type="button"
  >
    <img
      alt="test title"
      className="bdl-AdditionalTab-icon"
      onError={[Function]}
      src="https://foo.com/image"
    />
  </PlainButton>
</AdditionalTabTooltip>
`;
